Fix lander scrollbar when present

--- a/src/components/modal/v2/styles/components/_body-content.scss
+++ b/src/components/modal/v2/styles/components/_body-content.scss
@@ -51,6 +51,7 @@
         margin-bottom: 4rem;
         border-radius: 0;
         background: transparent;
+        overflow: visible;
     }
 
     // Small reverse border radius hook below the header to curve the top left
